Suppress warnings and fix deprecations